Created module for pi control functions and a stylesheet stub

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css">
     <title>Stoup CH - Screen Manager</title>
   </head>
 
   <body>
     <h1>Stoup Capitol Hill Screen Manager</h1>
     <p>If you can see this, the express server is returning html on the root route.</p>
+
+    <hr />
+    <h1>Restart API Route Tester</h1>
+    <div>
+      <label for="screen-id">
+        <code>https://localhost:3000/api/restart-pi/</code>
+      </label>
+      <input type="text" id="screen-id"/>
+      <button>
+        Submit
+      </button>
+    </div>
   </body>
 </html>
