--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,17 @@
     <p>If you can see this, the express server is returning html on the root route.</p>
 
     <hr />
+
+    <!--<h1>Restart Left Mez Screen Test</h1>-->
+    <h1>Restart Right Coffee Screen Test</h1>
+    <div>
+      <a href="http://localhost:3000/api/restart/420">
+        <!--Restart Left Mez Screen-->
+        Restart Right Coffee Screen
+      </a>
+    </div>
+
+    <hr />
     <h1>Restart API Route Tester</h1>
     <div>
       <label for="screen-id">
